--- a/views/tokens.html
+++ b/views/tokens.html
@@ -14,13 +14,13 @@
 <table class="table darker table-responsive table-borderless d-none">
   <thead>
     <tr>
-      <th style="width: 8% !important;">SYMBOL</th>
-      <th style="width: 42% !important;">NAME</th>
-      <th style="width: 5% !important;">PRICE</th>
-      <th style="width: 10% !important;"> M CAP</th>
-      <th style="width: 5% !important;">% CHANGE</th>
-      <th style="width: 5% !important;">24H VOL</th>
-      <th style="width: 25% !important;"></th>
+      <th>SYMBOL</th>
+      <th>NAME</th>
+      <th>PRICE</th>
+      <th>M CAP</th>
+      <th>% CHANGE</th>
+      <th>24H VOL</th>
+      <th></th>
     </tr>
   </thead>
   <tbody id="tokens_table">
