--- a/css/app.css
+++ b/css/app.css
@@ -3,11 +3,17 @@
 }
 body, html {
   height: 100%;
-  font-family: 'Montserrat', sans-serif;
+  /* font-family: 'Montserrat', sans-serif; */
   color: #d9e1e8;
 }
 input {
   background-color: rgb(39, 76, 94) !important;
+  border-color: rgb(39, 76, 94) !important;
+  margin-bottom: 0.2em;
+  color: #fff !important;
+}
+input::placeholder {
+  color: #fff !important;
 }
 .no-outline {
   outline: none;
@@ -19,14 +25,14 @@ input {
   background-color: #10151e;
   color: #d9e1e8;
 }
-.link, .link:hover {
+.link, .link:hover, a, a:hover {
   color: #a3daff;
 }
 .heading{
   font-family: 'Fira Code', monospace;
 }
 .bg-dark::placeholder {
-  color: rgba(255,255,255,.5);
+  color: rgba(255,255,255,.5) !important;
 }
 .nav-link{
   font-family: 'Fira Code', monospace;
@@ -45,9 +51,6 @@ input {
 .modal-header, .modal-footer {
   border-color: #313d4f;
 }
-a {
-  color: #a3daff;
-}
 .logged_in {
   display: none !important;
 }
@@ -57,10 +60,15 @@ a {
 #toast_area {
   z-index: 5000;
 }
-header .big {
+.big {
   font-weight: bold !important;
   font-size: 1.8em;
   margin-bottom: 0.5em;
+}
+.mid {
+  font-size: 1.2em;
+  font-weight: bold;
+  margin-bottom: 0.05em;
 }
 table tbody tr:nth-child(odd) {
   background-color: rgba(0,0,0,.05);
@@ -71,18 +79,25 @@ th {
 .tbl_btn {
   font-weight: bold;
   background-color: var(--primary);
-  padding: 0.01em 0.25em;
+  padding: 0.15em 0.25em;
 }
 .tbl_btn:focus {
   box-shadow: none !important;
 }
 .btn {
-  margin: 0.1em;
-  font-weight: bold;
+  margin: 0.13em;
 }
 .case-fix {
   text-transform: capitalize;
 }
 .dark_secondary {
   background-color: #1b1e29 !important;
+}
+.input-group-text {
+  color: #fff;
+  border: none;
+  background-color: rgb(39, 76, 94);
+}
+.input-group {
+  margin-bottom: 0.3em;
 }
