--- a/views/tokens.html
+++ b/views/tokens.html
@@ -55,13 +55,6 @@
           <td class="${isChangePositive(token.change) ? 'text-success' : 'text-danger'}">${token.change}</td>
           <td>$${n(token.volume)}</td>
           <td class="d-flex flex-row float-right">
-            <a type="button" href="?p=info&symbol=${token.symbol}" class="btn tbl_btn pushBTN" title="Info">
-              <svg width="1.3em" height="1.3em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"/>
-                <path d="M8.93 6.588l-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588z"/>
-                <circle cx="8" cy="4.5" r="1"/>
-              </svg>
-            </a>
             <a type="button" href="?p=market&symbol=${token.symbol}" class="btn tbl_btn pushBTN" title="Market">
               <svg width="1.3em" height="1.3em" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"></polyline>
@@ -82,7 +75,6 @@
       const price = metric ?
         BigNumber(metric.lastPrice)
           .multipliedBy(hivePrice)
-          .toFixed(3)
           .toString()
         : '0';
       const marketCap = BigNumber(token.circulatingSupply)
@@ -100,7 +92,7 @@
       list.push({
         symbol: token.symbol,
         name: token.name,
-        price,
+        price: parseFloat(price).toFixed(5),
         marketCap,
         change,
         volume
